--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ Todo:
   ✔ Find a way to overlay the elements without modifying existing elements on the dom.  Create new elements and position them so not to affect anybodys site @done(18-05-23 21:56)
   ✔ Fix the elements that have overlays but are not truly clickable- things like aria-hidden and 1px width and height elements @done(18-05-25 20:33)
     This is going to be ongoing...
-  ☐ Fix positioning of absolute positioned overlay.  Doesn't seem to work with scrolling
+  ✔ Fix positioning of absolute positioned overlay.  Doesn't seem to work with scrolling @done(18-05-27 21:49)
   ☐ When entering numbers like alt 24 it comes up with a weird up arrow etc.  Find a way to stop it from doing that or change the shortcuts
   ☐ Add Backspace functionality to delete pushed numbers
   ☐ Make it a bit more user friendly by displaying the pushed numbers on the screen which allow user to fully utilise the backspace functionality
