--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ Todo:
   ✔ Fix the elements that have overlays but are not truly clickable- things like aria-hidden and 1px width and height elements @done(18-05-25 20:33)
     This is going to be ongoing...
   ✔ Fix positioning of absolute positioned overlay.  Doesn't seem to work with scrolling @done(18-05-27 21:49)
-  ☐ When entering numbers like alt 24 it comes up with a weird up arrow etc.  Find a way to stop it from doing that or change the shortcuts
+  ✔ When entering numbers like alt 24 it comes up with a weird up arrow etc.  Find a way to stop it from doing that or change the shortcuts @done(18-06-03 19:39)
   ☐ Add Backspace functionality to delete pushed numbers
   ☐ Make it a bit more user friendly by displaying the pushed numbers on the screen which allow user to fully utilise the backspace functionality
   ☐ Make the following available and fully functional on the overlay
