--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ Todo:
     This is going to be ongoing...
   ✔ Fix positioning of absolute positioned overlay.  Doesn't seem to work with scrolling @done(18-05-27 21:49)
   ✔ When entering numbers like alt 24 it comes up with a weird up arrow etc.  Find a way to stop it from doing that or change the shortcuts @done(18-06-03 19:39)
+  ✔ Add an overlay in to display the current keys pressed - will be useful later when we allow people to backspace and delete a pushed character @done(18-06-05 22:08)
   ☐ Write some logic to account for parent overflows, more info here: (Line 75 = isVisible(el))
   ☐ Add Backspace functionality to delete pushed numbers
   ☐ Make it a bit more user friendly by displaying the pushed numbers on the screen which allow user to fully utilise the backspace functionality
