--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Todo:
     ☐ Links
     ☐ Inputs
     ☐ Dropdowns
+      Might be able to do something about the select options data item size.  Think there's in built stuff for selects that make it look like a combo box that we can use.  
     ☐ etc
   ☐ Fix extension display on this site: http://www.bbc.co.uk/news/business/market-data
   ☐ Focus on first input is focusing on a hidden element on this page: https://www.bbc.co.uk/weather
